# oryx

./: ARTIFACT-EVALUATION.md  README.md  emp-tool.diff  install.md
common/: common.h
computing-server/: CMakeLists.txt  README.md  server.cpp  server.hpp  server_test.cpp  two_pc_compute.hpp  two_pc_compute_test.cpp
computing-server/configs/: config_s1.txt  config_s2.txt  config_s3.txt  config_template.txt
computing-server/m5.16xlarge.configs/: config_s1.txt  config_s2.txt  config_s3.txt
dataset-scripts/: README.md  gen_with_degree_limit.py  graph_gen_synthetic.py  sample_percentage_from_degree_limit_graph.py  transform_raw_data_into_graph.py
demo-graph/: demo.txt  out1_small  out2_small  out3_small
graph-holder/: CMakeLists.txt  README.md  graph_holder.cpp  graph_holder.hpp
local-cycle-detect/: CMakeLists.txt  analyze_node_degree.cpp  cycle-count.cpp  graphstore.hpp
micro-eval/: CMakeLists.txt  README.md  eval_server.hpp  extract.cpp  filter.cpp  neighbor.cpp  shuffle.cpp  sort.cpp
micro-eval/extract_configs/: config_s1.txt  config_s2.txt
micro-eval/filter_configs/: config_s1.txt  config_s2.txt
micro-eval/neighbor_configs/: config_s2.txt
micro-eval/scripts/: network_analysis.py  network_analysis_shuffle.py  run_2pc_all.sh  run_extract.sh  run_filter.sh  run_neighbor.sh  run_shuffle.sh  run_sort.sh
micro-eval/shuffle_configs/: config_s1.txt  config_s2.txt  config_s3.txt
micro-eval/sort_configs/: config_s1.txt
secret-share/: CMakeLists.txt  secret_share.hpp  secret_share_test.cpp
setup/: install.md  install.sh
